--- a/style.css
+++ b/style.css
@@ -33,6 +33,30 @@ body {
   color: #ad886e;
 }
 
+.btn {
+  cursor: pointer;
+  display: inline-block;
+  width: 100%;
+  background: #fcd7b6;
+  padding: 15px;
+  font-family: inherit;
+  font-size: 16px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.text {
+  margin-top: 30px;
+}
+
 .form-control {
   position: relative;
   margin: 20px 0 40px;
